# credit-flow

./: .env  .env.example  .gitignore  AUTO_UPDATE_SETUP.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_LINUX.md  CHANGELOG_AUTO_UPDATE.md  CREDIT-FLOW.md  DEBUG_REPORT.md  DEEP_LINK_USAGE.md  DEMARRAGE-LOCAL.md  GITHUB_ACTIONS.md  ICONS_FIX.md  OFFLINE_STORAGE.md  README.md  build-linux-docker.sh  eslint.config.js  index.html  latest.json  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test-build.yml  vite.config.ts
.github/workflows/: README.md  build-all.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  fix-icons.yml  release.yml  test-build.yml
app/: app.vue  error.vue
app/components/: CreditFlowLogo.vue  Search.vue
app/composables/: useAuthRole.ts  useSupabase.ts  useWorkScheduleChunkedUpload.ts
app/constants/: menuAccess.ts  menus.ts
app/layouts/: default.vue
app/lib/: supabase.ts  work-schedule-chunked-upload.integration.example.md  work-schedule-chunked-upload.ts
app/middleware/: auth.global.ts
app/pages/: dashboard.vue  index.vue  privacy.vue  terms.vue
app/plugins/: auth-init.client.ts  auth.client.ts  supabase.client.ts
app/types/: database.ts
credit-flow-reference/: Dockerfile.linux-build  build-linux.sh  eslint.config.js  latest.json  package-lock.json  package.json  tailwind.config.ts  test-build.yml  tsconfig.json  vite.config.ts
credit-flow-reference/public/: download.html
credit-flow-reference/src-tauri/: Cargo.toml  tauri.key.pub
dev-dist/: sw.js
docs/: STORAGE-AVATARS.md  TAURI-NUXT.md  VERCEL.md
public/: supabase-config.json  supabase-config.json.example
scripts/: verify-icons.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  README.md  tauri.conf.json  tauri.key  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/hooks/: useAuth.tsx  (+9 more)
supabase/: config.toml
(+221 files in other folders)
